kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: blog
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: blog
  type: NodePort
